# article_tracker_with_RAG

./: .gitignore  CLAUDE.md  README.md  main.py  pdf_extraction.ipynb  pyproject.toml  supabase_test.ipynb
.github/workflows/: broad-collection.yml  daily-discovery.yml
frontend/: index.html  index2.html
notebooks/: arxiv_explorer.ipynb
scripts/: discover_papers.py
src/: database.py  main.py  models.py
src/ai_research_tracker/api/: main.py  models.py
